jac2020/classes/com/esarks/arm/applicationFramework/Router.err
C:\GitHub\ArchitectsCompanion\jac2020\classes\com\esarks\arm\applicationFramework\Router.java:21: error: '{' expected
public class Router com.esarks.mic.MicScriptHelper  {
                   ^
1 error
